--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-
-LEGO WebStore
+<body>
+<head>
+<h1>LEGO WebStore</h1>
+</head>
 
 Produit
 Acheter
@@ -27,5 +29,6 @@ J'ai relu ma commande et certifie que ces informations sont correctes.
 Retour en haut de page
 TP1 : Découverte de HTML et CSS
 L2 Développement Web - 2018
+</body>
 
 </html>
