--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -9,21 +9,21 @@
 Produit
 Acheter
 
-Acheter des LEGO
+<h1>Acheter des LEGO</h1>
 
 Remplissez le formulaire ci-dessous pour commander des LEGO !
 
-Informations personnelles
+<h2>Informations personnelles</h2>
 Civilité: M. Mme.
 Nom:
 Prénom:
 Mail:
 
-Informations de livraison
+<h2>Informations de livraison</h2>
 Quantité commandée: 1 boîte 2 boîtes 3 boîtes 4 boîtes 5 boîtes
 Adresse de livraison:
 
-Confirmation
+<h2>Confirmation</h2>
 J'ai relu ma commande et certifie que ces informations sont correctes.
 
 Retour en haut de page
