--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 
 <html>
-
-LEGO WebStore
+<body>
+<head>LEGO WebStore</head>
 
 Produit
 Acheter
 
-LEGO Architecture - New York
+<h1>LEGO Architecture - New York</h1>
 Célébrez New York avec ce modèle LEGO Architecture Skyline !
 Aperçu de la construction
 
-Description du produit
+<h2>Description du produit</h2>
 Fêtez la diversité architecturale de New York avec ce modèle détaillé en briques
 LEGO. La collection LEGO Architecture Skyline offre des modèles adaptés à
 l'exposition à la maison et au bureau, et a été développée pour toutes les
@@ -23,7 +23,7 @@ Cet ensemble comprend le Flatiron Building, le Chrysler Building, l'Empire State
 Building, le One World Trade Center et la Statue de la Liberté, et un écriteau
 décoratif “New York”.
 
-Spécificités
+<h2>Spécificités</h2>
 Interprétation LEGO du paysage de New York.
 Comprend le Flatiron Building, le Chrysler Building, l'Empire State Building,
 le One World Trade Center et la Statue de la Liberté.
@@ -33,7 +33,7 @@ Skyline.
 Mesure 26 cm de haut, 25 cm de large et 4 cm de profondeur.
 Source: Site officiel LEGO
 
-Caractéristiques
+<h2>Caractéristiques</h2>
 Id. produit       Âge        Nombre de pièces  Prix
 21028        Mini.   Maxi.   598 pièces        49,99€
              12 ans  99 ans
@@ -41,5 +41,5 @@ Id. produit       Âge        Nombre de pièces  Prix
 Retour en haut de page
 TP1 : Découverte de HTML et CSS
 L2 Développement Web - 2018
-
+</body>
 </html>
