--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 
 <html>
-<body>
 <head>
-<h1>LEGO WebStore</h1>
+<title>LEGO WebStore</title>
 </head>
+<body>
+<h1>LEGO WEBSTORE</h1>
 
-Produit
-Acheter
+<hr>
+<ul>
+<li><a href=produit.html>Produit</a></li>
+<li><a href=acheter.html>Acheter</a></li>
+</ul>
+<hr>
 
-<h1>Acheter des LEGO</h1>
+<h2>Acheter des LEGO</h2>
 
 Remplissez le formulaire ci-dessous pour commander des LEGO !
 
-<h2>Informations personnelles</h2>
+<h3>Informations personnelles</h3>
 Civilité: M. Mme.
 Nom:
 Prénom:
 Mail:
 
-<h2>Informations de livraison</h2>
+<h3>Informations de livraison</h3>
 Quantité commandée: 1 boîte 2 boîtes 3 boîtes 4 boîtes 5 boîtes
 Adresse de livraison:
 
-<h2>Confirmation</h2>
+<h3>Confirmation</h3>
 J'ai relu ma commande et certifie que ces informations sont correctes.
 
 Retour en haut de page
