--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 
 <html>
+
+<head>
+<title><i>LEGO WebStore</i>!<br /></title>
+</head>
 <body>
-<head>LEGO WebStore</head>
+    <header></header>
+<h1>LEGO WebStore</h1>
+<hr>
+<ul>
+<li><a href=produit.html>Produit</a></li>
+<li><a href=acheter.html>Acheter</a></li>
+</ul>
+<hr>
 
-Produit
-Acheter
-
-<h1>LEGO Architecture - New York</h1>
+<h2>LEGO Architecture - New York</h2>
 Célébrez New York avec ce modèle LEGO Architecture Skyline !
 Aperçu de la construction
 
-<h2>Description du produit</h2>
+<h3>Description du produit</h3>
 Fêtez la diversité architecturale de New York avec ce modèle détaillé en briques
 LEGO. La collection LEGO Architecture Skyline offre des modèles adaptés à
 l'exposition à la maison et au bureau, et a été développée pour toutes les
@@ -23,7 +31,7 @@ Cet ensemble comprend le Flatiron Building, le Chrysler Building, l'Empire State
 Building, le One World Trade Center et la Statue de la Liberté, et un écriteau
 décoratif “New York”.
 
-<h2>Spécificités</h2>
+<h3>Spécificités</h3>
 Interprétation LEGO du paysage de New York.
 Comprend le Flatiron Building, le Chrysler Building, l'Empire State Building,
 le One World Trade Center et la Statue de la Liberté.
@@ -33,7 +41,7 @@ Skyline.
 Mesure 26 cm de haut, 25 cm de large et 4 cm de profondeur.
 Source: Site officiel LEGO
 
-<h2>Caractéristiques</h2>
+<h3>Caractéristiques</h3>
 Id. produit       Âge        Nombre de pièces  Prix
 21028        Mini.   Maxi.   598 pièces        49,99€
              12 ans  99 ans
