--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -16,21 +16,27 @@
 <hr>
 
 <h2>LEGO Architecture - New York</h2>
+<p>
 Célébrez New York avec ce modèle LEGO Architecture Skyline !
 Aperçu de la construction
+</p> 
+<img src="/TP1/TP1/img/produit_newyork_1.jpeg">
 
 <h3>Description du produit</h3>
+<p>
 Fêtez la diversité architecturale de New York avec ce modèle détaillé en briques
 LEGO. La collection LEGO Architecture Skyline offre des modèles adaptés à
 l'exposition à la maison et au bureau, et a été développée pour toutes les
 personnes qui s'intéressent au voyage, à la création, à l'histoire et à
 l'architecture.
+</p>
+<p>
 Chaque ensemble a une échelle adaptée pour donner une idée précise de la taille
 comparative de chaque structure, avec une représentation en couleurs réalistes.
 Cet ensemble comprend le Flatiron Building, le Chrysler Building, l'Empire State
 Building, le One World Trade Center et la Statue de la Liberté, et un écriteau
 décoratif “New York”.
-
+</p>
 <h3>Spécificités</h3>
 Interprétation LEGO du paysage de New York.
 Comprend le Flatiron Building, le Chrysler Building, l'Empire State Building,
