--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -19,7 +19,7 @@
 <p>
 Célébrez New York avec ce modèle LEGO Architecture Skyline !
 Aperçu de la construction
-</p> 
+</p>
 <img src="/TP1/TP1/img/produit_newyork_1.jpeg">
 
 <h3>Description du produit</h3>
@@ -50,9 +50,32 @@ Skyline.</li>
 Source: Site officiel LEGO
 
 <h3>Caractéristiques</h3>
-Id. produit       Âge        Nombre de pièces  Prix
-21028        Mini.   Maxi.   598 pièces        49,99€
-             12 ans  99 ans
+<table border="border">
+    <thead>
+        <tr>
+            <th>Id. produit</th>
+            <th colspan="2">Âge</th>
+            <th>Nombre de pièces</th>
+            <th>Prix</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+           <td rowspan="2">21028</td>
+           <td >Mini.  </td>
+           <td> Maxi.  </td>
+           <td  rowspan="2"> 598 pièces       </td>
+           <td  rowspan="2"> 49,99€</td>
+        </tr>
+        <tr>
+            <td>12 ans</td>
+            <td>99 ans</td>
+
+
+         </tr>
+    </tbody>
+</table>
+<hr>
 
 Retour en haut de page
 TP1 : Découverte de HTML et CSS
