--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -31,9 +31,12 @@ Adresse de livraison:
 <h3>Confirmation</h3>
 J'ai relu ma commande et certifie que ces informations sont correctes.
 <hr>
-Retour en haut de page
-TP1 : Découverte de HTML et CSS
-L2 Développement Web - 2018
+<a href="#" class="btn btn-default">Retour en haut de page</a>
+<p>
+    TP1 : Découverte de HTML et CSS
+    </p><p>
+    L2 Développement Web - 2018
+    </p>
 </body>
 
 </html>
