--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -77,8 +77,11 @@ Source: Site officiel LEGO
 </table>
 <hr>
 
-Retour en haut de page
+<a href="#" class="btn btn-default">Retour en haut de page</a>
+<p>
 TP1 : Découverte de HTML et CSS
+</p><p>
 L2 Développement Web - 2018
+</p>
 </body>
 </html>
