--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -17,7 +17,7 @@
 
 <h2>LEGO Architecture - New York</h2>
 <p>
-Célébrez New York avec ce modèle LEGO Architecture Skyline !
+Célébrez <a href="https://fr.wikipedia.org/wiki/New_York" target="_blank">New York </a> avec ce modèle LEGO Architecture Skyline !
 Aperçu de la construction
 </p>
 <img src="/TP1/TP1/img/produit_newyork_1.jpeg">
@@ -70,8 +70,6 @@ Source: Site officiel LEGO
         <tr>
             <td>12 ans</td>
             <td>99 ans</td>
-
-
          </tr>
     </tbody>
 </table>
