--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -19,17 +19,18 @@
 Remplissez le formulaire ci-dessous pour commander des LEGO !
 
 <h3>Informations personnelles</h3>
-Civilité: M. Mme.
-Nom:
-Prénom:
-Mail:
+<p>Civilité:</p>
+<input type="radio" name="genre"/> M.<input type="radio" name="genre"/> Mme.<br/>
+<p>Nom:</p><p><input name="nom" type="text"/> </p>
+<p>Prénom:</p><p><input name="prénom" type="text"/> </p>
+<p>Mail:</p><p> <input name="mail" type="mail"/> </p>
 
 <h3>Informations de livraison</h3>
 Quantité commandée: 1 boîte 2 boîtes 3 boîtes 4 boîtes 5 boîtes
 Adresse de livraison:
 
 <h3>Confirmation</h3>
-J'ai relu ma commande et certifie que ces informations sont correctes.
+<input type="checkbox"/>J'ai relu ma commande et certifie que ces informations sont correctes.</br>
 <hr>
 <a href="#" class="btn btn-default">Retour en haut de page :)</a>
 <p>
