--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -5,6 +5,7 @@
 <title>LEGO WebStore</title>
 </head>
 <body>
+<div class="test">
 <h1>LEGO WEBSTORE</h1>
 
 <hr>
@@ -38,6 +39,7 @@ Adresse de livraison:
     </p><p>
     L2 Développement Web - 2018
     </p>
+    </div>
 </body>
 
 </html>
