--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
 <title><i>LEGO WebStore</i>!<br /></title>
+<link rel="stylesheet" href="/TP1/TP1/styles.css">
 </head>
-<body>
+
+<body id="produit">
+<div class="test">
+
     <header></header>
 <h1>LEGO WebStore</h1>
 <hr>
@@ -81,5 +84,7 @@ TP1 : Découverte de HTML et CSS
 </p><p>
 L2 Développement Web - 2018
 </p>
+</div>
+
 </body>
 </html>
