--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -2,11 +2,13 @@
 
 <html>
 <head>
-<title>LEGO WebStore</title>
+<title><span>LEGO</span> WebStore</title>
+<link rel="stylesheet" href="../styles.css">
+
 </head>
 <body>
 <div class="test">
-<h1>LEGO WEBSTORE</h1>
+<h1><span>LEGO</span> WEBSTORE</h1>
 
 <hr>
 <ul>
@@ -15,9 +17,9 @@
 </ul>
 <hr>
 
-<h2>Acheter des LEGO</h2>
+<h2>Acheter des <span>LEGO</span></h2>
 
-Remplissez le formulaire ci-dessous pour commander des LEGO !
+Remplissez le formulaire ci-dessous pour commander des <span>LEGO</span> !
 
 <h3>Informations personnelles</h3>
 <p>Civilité:</p>
