--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-<title><i>LEGO WebStore</i>!<br /></title>
-<link rel="stylesheet" href="/TP1/TP1/styles.css">
+<title><span class="LEGO">LEGO</span> WebStore</title>
+<link rel="stylesheet" href="../styles.css">
 </head>
 
 <body id="produit">
 <div class="test">
 
     <header></header>
-<h1>LEGO WebStore</h1>
+<h1><span class="LEGO">LEGO</span> WebStore</h1>
 <hr>
 <ul>
 <li><a href=produit.html>Produit</a></li>
@@ -18,9 +18,9 @@
 </ul>
 <hr>
 
-<h2>LEGO Architecture - New York</h2>
+<h2><span class="LEGO">LEGO</span> Architecture - New York</h2>
 <p>
-Célébrez <a href="https://fr.wikipedia.org/wiki/New_York" target="_blank">New York </a> avec ce modèle LEGO Architecture Skyline !
+Célébrez <a href="https://fr.wikipedia.org/wiki/New_York" target="_blank">New York </a> avec ce modèle <span class="LEGO">LEGO</span> Architecture Skyline !
 Aperçu de la construction
 </p>
 <img src="/TP1/TP1/img/produit_newyork_1.jpeg">
@@ -28,7 +28,7 @@ Aperçu de la construction
 <h3>Description du produit</h3>
 <p>
 Fêtez la diversité architecturale de New York avec ce modèle détaillé en briques
-LEGO. La collection LEGO Architecture Skyline offre des modèles adaptés à
+<span class="LEGO">LEGO</span>. La collection <span class="LEGO">LEGO</span> Architecture Skyline offre des modèles adaptés à
 l'exposition à la maison et au bureau, et a été développée pour toutes les
 personnes qui s'intéressent au voyage, à la création, à l'histoire et à
 l'architecture.
@@ -42,15 +42,15 @@ décoratif “New York”.
 </p>
 <h3>Spécificités</h3>
 <ul>
-<li>Interprétation LEGO du paysage de New York.</li>
+<li>Interprétation <span class="LEGO">LEGO</span> du paysage de New York.</li>
 <li>Comprend le Flatiron Building, le Chrysler Building, l'Empire State Building,le One World Trade Center et la Statue de la Liberté.</li>
 <li>Inclut une plaque de base 4x32 avec un écriteau décoratif "New York".</li>
-<li>Recréez les plus belles villes du monde avec la collection LEGO Architecture
+<li>Recréez les plus belles villes du monde avec la collection <span class="LEGO">LEGO</span> Architecture
 Skyline.</li>
 <li>Mesure 26 cm de haut, 25 cm de large et 4 cm de profondeur.</li>
 </ul>
 
-Source: Site officiel LEGO
+Source: Site officiel <span class="LEGO">LEGO</span>
 
 <h3>Caractéristiques</h3>
 <table border="border">
