--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -2,13 +2,13 @@
 
 <html>
 <head>
-<title><span>LEGO</span> WebStore</title>
+<title>LEGO WebStore</title>
 <link rel="stylesheet" href="../styles.css">
 
 </head>
 <body>
 <div class="test">
-<h1><span>LEGO</span> WEBSTORE</h1>
+<h1><span class="LEGO">LEGO</span> WEBSTORE</h1>
 
 <hr>
 <ul>
@@ -17,7 +17,7 @@
 </ul>
 <hr>
 
-<h2>Acheter des <span>LEGO</span></h2>
+<h2>Acheter des <span class="LEGO">LEGO</span></h2>
 
 Remplissez le formulaire ci-dessous pour commander des <span>LEGO</span> !
 
