--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title><span class="LEGO">LEGO</span> WebStore</title>
+<title>LEGO WebStore</title>
 <link rel="stylesheet" href="../styles.css">
 </head>
 
