--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -42,12 +42,12 @@ décoratif “New York”.
 </p>
 <h3>Spécificités</h3>
 <ul>
-<li>Interprétation <span class="LEGO">LEGO</span> du paysage de New York.</li>
-<li>Comprend le Flatiron Building, le Chrysler Building, l'Empire State Building,le One World Trade Center et la Statue de la Liberté.</li>
-<li>Inclut une plaque de base 4x32 avec un écriteau décoratif "New York".</li>
-<li>Recréez les plus belles villes du monde avec la collection <span class="LEGO">LEGO</span> Architecture
+<li class="Sépcifice">Interprétation <span class="LEGO">LEGO</span> du paysage de New York.</li>
+<li class="Sépcifice">Comprend le Flatiron Building, le Chrysler Building, l'Empire State Building,le One World Trade Center et la Statue de la Liberté.</li>
+<li class="Sépcifice">Inclut une plaque de base 4x32 avec un écriteau décoratif "New York".</li>
+<li class="Sépcifice">Recréez les plus belles villes du monde avec la collection <span class="LEGO">LEGO</span> Architecture
 Skyline.</li>
-<li>Mesure 26 cm de haut, 25 cm de large et 4 cm de profondeur.</li>
+<li class="Sépcifice">Mesure 26 cm de haut, 25 cm de large et 4 cm de profondeur.</li>
 </ul>
 
 Source: Site officiel <span class="LEGO">LEGO</span>
