--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -29,13 +29,19 @@ Remplissez le formulaire ci-dessous pour commander des <span>LEGO</span> !
 <p>Mail:</p><p> <input name="mail" type="mail"/> </p>
 
 <h3>Informations de livraison</h3>
-Quantité commandée: 1 boîte 2 boîtes 3 boîtes 4 boîtes 5 boîtes
-Adresse de livraison:
-
+<select name="Quantité commandée:">
+    <option value="1 boîtes">1</option>
+    <option value="2 boîtes">2</option>
+    <option value="3 boîtes">3</option>
+    <option value="4 boîtes">4</option>
+    <option value="5 boîtes">5</option>
+  </select>
+  <p>Adresse de livraison:</p><textarea name="resume" rows="4" cols="20"></textarea>
 <h3>Confirmation</h3>
 <input type="checkbox"/>J'ai relu ma commande et certifie que ces informations sont correctes.</br>
+<input type="submit" value="Confirmer la commande" />
 <hr>
-<a href="#" class="btn btn-default">Retour en haut de page :)</a>
+<a href="#" class="btn btn-default">Retour en haut de page</a>
 <p>
     TP1 : Découverte de HTML et CSS
     </p><p>
