--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -53,7 +53,7 @@ Skyline.</li>
 Source: Site officiel <span class="LEGO">LEGO</span>
 
 <h3>Caractéristiques</h3>
-<table border="border">
+<table>
     <thead>
         <tr>
             <th>Id. produit</th>
