--- a/TP1/TP1/html1/acheter.html
+++ b/TP1/TP1/html1/acheter.html
@@ -30,11 +30,11 @@ Remplissez le formulaire ci-dessous pour commander des <span>LEGO</span> !
 
 <h3>Informations de livraison</h3>
 <select name="Quantité commandée:">
-    <option value="1 boîtes">1</option>
-    <option value="2 boîtes">2</option>
-    <option value="3 boîtes">3</option>
-    <option value="4 boîtes">4</option>
-    <option value="5 boîtes">5</option>
+    <option value="1 boîtes">1 boîte</option>
+    <option value="2 boîtes">2 boîtes</option>
+    <option value="3 boîtes">3 boîtes</option>
+    <option value="4 boîtes">4 boîtes</option>
+    <option value="5 boîtes">5 boîtes</option>
   </select>
   <p>Adresse de livraison:</p><textarea name="resume" rows="4" cols="20"></textarea>
 <h3>Confirmation</h3>
