--- a/TP1/TP1/html1/produit.html
+++ b/TP1/TP1/html1/produit.html
@@ -20,10 +20,13 @@
 
 <h2><span class="LEGO">LEGO</span> Architecture - New York</h2>
 <p>
-Célébrez <a href="https://fr.wikipedia.org/wiki/New_York" target="_blank">New York </a> avec ce modèle <span class="LEGO">LEGO</span> Architecture Skyline !
+    Célébrez <a href="https://fr.wikipedia.org/wiki/New_York" target="_blank">New York </a> avec ce modèle <span class="LEGO">LEGO</span> Architecture Skyline !
 Aperçu de la construction
 </p>
+<p id="p1">
 <img src="/TP1/TP1/img/produit_newyork_1.jpeg">
+<br>Apercu de la construction
+</p>
 
 <h3>Description du produit</h3>
 <p>
@@ -79,6 +82,7 @@ Source: Site officiel <span class="LEGO">LEGO</span>
 <hr>
 
 <a href="#" class="btn btn-default">Retour en haut de page</a>
+<p>Autheur : Jérémy buon</p>
 <p>
 TP1 : Découverte de HTML et CSS
 </p><p>
